--- a/privacy_classifier/deploy/jenkins.env
+++ b/privacy_classifier/deploy/jenkins.env
@@ -23,7 +23,7 @@ env.SLACK_CHANNEL="#model-deploy-notifications"
 //Docker
 //Do NOT CHANGE
 env.DOCKER_REGISTRY="gcr.io"
-env.DOCKER_BASE_PATH="zoominfo-container-registry"
+env.DOCKER_BASE_PATH="GAIA-container-registry"
 
 //LEAVE BELOW ALONE, COMPLETES GROOVY SCRIPT
 return this
