--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ djangorestframework
 whitenoise
 django-rest-knox
 django-cors-headers
+dsframework==0.1.93
+torch==1.13.1
+adapter-transformers==3.1.0
