--- a/privacy_classifier/pipeline/artifacts/adapters/privacy_model_v02/head_config.json
+++ b/privacy_classifier/pipeline/artifacts/adapters/privacy_model_v02/head_config.json
@@ -4,8 +4,8 @@
     "bias": true,
     "head_type": "classification",
     "label2id": {
-      "0": 0,
-      "1": 1
+      "Allow": 0,
+      "Block": 1
     },
     "layers": 2,
     "num_labels": 2,
