added company domain added company privacy model prompt tracking added user prompt tracking moved model into separate folder allow privacy model api only for users with company domain email registered in our system update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 python-dotenv
-mysqlclient
 django
-djangorestframework
-whitenoise
+django-crispy-forms
 django-rest-knox
 django-cors-headers
+djangorestframework
+mysqlclient
+uwsgi
+whitenoise
 dsframework==0.1.93
 torch==1.13.1
 adapter-transformers==3.1.0
