--- a/deploy/gaia.conf
+++ b/deploy/gaia.conf
@@ -1,3 +1,7 @@
+upstream django {
+    server unix:///run/uwsgi/mysite.sock;
+}
+
 server {
     listen      80;
     server_name 13.230.105.89;
@@ -11,6 +15,6 @@ server {
 
     location / {
         uwsgi_pass  django;
-        include     /home/ubuntu/uwsgi_params;
+        include     /home/ubuntu/deploy/uwsgi_params;
     }
 }
