change static files location

--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -9,7 +9,7 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
-        alias /static/;
+        alias /home/ubuntu/app/gaia/main_app/static/;
     }
 
 
