added another ip

--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -1,10 +1,10 @@
 upstream django {
-    server unix:///run/uwsgi/mysite.sock;
+    server unix:///run/uwsgi/gaia.sock;
 }
 
 server {
     listen      80;
-    server_name 13.230.105.89;
+    server_name 43.206.228.120;
     charset     utf-8;
 
     location = /favicon.ico { access_log off; log_not_found off; }
