added another ip

--- a/deploy/gaia.ini
+++ b/deploy/gaia.ini
@@ -4,7 +4,7 @@ module = main_app.wsgi
 home = /home/ubuntu/app/gaia/venv/
 master = true
 processes = 10
-socket = /run/uwsgi/mysite.sock
+socket = /run/uwsgi/gaia.sock
 chmod-socket = 666
 vacuum = true
 logto = /var/log/uwsgi/%n.log
