--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -16,5 +16,12 @@ server {
     location / {
         uwsgi_pass  django;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
+
+        proxy_pass_header X-CSRFToken;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header HOST $http_host;
+        proxy_set_header X-NginX-Proxy true;
     }
 }
