--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -11,6 +11,9 @@ server {
     location /static {
         alias /home/ubuntu/app/gaia/main_app/static/;
     }
+    location /media  {
+        alias /home/ubuntu/app/gaia/main_app/media/;
+    }
 
 
     location / {
@@ -18,6 +21,7 @@ server {
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
 
         proxy_pass_header X-CSRFToken;
+        proxy_pass_header Cookie;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto http;
         proxy_set_header X-Real-IP $remote_addr;
