--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -19,5 +19,7 @@ server {
     location / {
         uwsgi_pass  django;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
+        uwsgi_pass_header Authorization;
+        uwsgi_pass_request_headers on;
     }
 }
