--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -19,7 +19,7 @@ server {
     location / {
         uwsgi_pass  django;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
-        uwsgi_pass_header Cookie;
-        uwsgi_pass_request_headers on;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
