--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -19,6 +19,6 @@ server {
     location / {
         uwsgi_pass  django;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
-        uwsgi_ignore_headers Set-Cookie Cache-Control Vary;
+        gzip_vary off;
     }
 }
