--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -7,6 +7,8 @@ server {
     server_name 13.112.220.195;
     charset     utf-8;
 
+    add_header Access-Control-Allow-Origin *;
+
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
         alias /home/ubuntu/app/gaia/main_app/static/;
