--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -7,8 +7,6 @@ server {
     server_name 13.112.220.195;
     charset     utf-8;
 
-    add_header Access-Control-Allow-Origin *;
-
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
         alias /home/ubuntu/app/gaia/main_app/static/;
@@ -21,6 +19,6 @@ server {
     location / {
         uwsgi_pass  django;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
-        gzip_vary off;
+        add_header 'Access-Control-Allow-Origin' '*';
     }
 }
