--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -20,6 +20,7 @@ server {
         uwsgi_pass  django;
         uwsgi_pass_request_headers on;
         uwsgi_param X-CSRFToken 'bar';
+        proxy_pass_header  X-CSRFToken;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
