--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -1,5 +1,5 @@
 upstream django {
-    server unix:///run/uwsgi/gaia_https.sock;
+    server unix:///run/uwsgi/gaia.sock;
 }
 
 server {
@@ -11,10 +11,17 @@ server {
     location /static {
         alias /home/ubuntu/app/gaia/main_app/static/;
     }
+    location /media  {
+        alias /home/ubuntu/app/gaia/main_app/media/;
+    }
 
 
     location / {
         uwsgi_pass  django;
+        uwsgi_pass_request_headers on;
+        uwsgi_param X-CSRFToken 'bar';
+        proxy_pass_header  X-CSRFToken;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
+        proxy_set_header Host $host;
     }
 }
