added gaia https

--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -1,4 +1,4 @@
-upstream django {
+upstream django_http {
     server unix:///run/uwsgi/gaia_https.sock;
 }
 
@@ -17,7 +17,7 @@ server {
 
 
     location / {
-        uwsgi_pass  django;
+        uwsgi_pass  django_http;
         uwsgi_pass_request_headers on;
         uwsgi_param X-CSRFToken 'bar';
         proxy_pass_header  X-CSRFToken;
