added gaia https

--- a/deploy/gaia_https.ini
+++ b/deploy/gaia_https.ini
@@ -5,8 +5,9 @@ home = /home/ubuntu/app/gaia/venv/
 master = true
 processes = 10
 socket = /run/uwsgi/gaia_https.sock
-chmod-socket = 666
+chmod-socket = 667
 vacuum = true
 logto = /var/log/uwsgi/%n.log
 logfile-chown = %(uid):%(uid)
 logfile-chmod = 666
+env =
