--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -7,6 +7,9 @@ server {
     server_name ec2-43-206-228-120.ap-northeast-1.compute.amazonaws.com;
     charset     utf-8;
 
+    ssl_certificate         /home/ubuntu/app/ssl/gaia.crt;
+    ssl_certificate_key     /home/ubuntu/app/ssl/gaia.key;
+
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
         alias /home/ubuntu/app/gaia/main_app/static/;
