--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -22,8 +22,8 @@ server {
     location / {
         uwsgi_pass  django_http;
         uwsgi_pass_request_headers on;
-        uwsgi_param X-CSRFToken 'bar';
-        proxy_pass_header  X-CSRFToken;
+        # proxy_pass_header  X-CSRFToken;
+        # proxy_pass_header  CSRF_COOKIE;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
