--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -19,9 +19,8 @@ server {
     location / {
         uwsgi_pass  django;
         uwsgi_pass_request_headers on;
-        # uwsgi_param X-CSRFToken $CSRF_COOKIE;
-        # proxy_pass_header  X-CSRFToken;
-        proxy_pass_header  CSRF_COOKIE;
+        uwsgi_param X-CSRFToken 'bar';
+        proxy_pass_header  X-CSRFToken;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
