--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -4,11 +4,18 @@ upstream django_http {
 
 server {
     listen      443;
-    server_name ec2-43-206-228-120.ap-northeast-1.compute.amazonaws.com;
+    server_name ec2-43-206-228-120.ap-northeast-1.compute.amazonaws.com aws.gaialabs.ai;
     charset     utf-8;
 
-    ssl_certificate         /home/ubuntu/app/ssl/gaia.crt;
-    ssl_certificate_key     /home/ubuntu/app/ssl/gaia.key;
+    # ssl_certificate         /home/ubuntu/app/ssl/gaia.crt;
+    # ssl_certificate_key     /home/ubuntu/app/ssl/gaia.key;
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/aws.gaialabs.ai/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/aws.gaialabs.ai/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
