--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -9,12 +9,12 @@ server {
 
     # ssl_certificate         /home/ubuntu/app/ssl/gaia.crt;
     # ssl_certificate_key     /home/ubuntu/app/ssl/gaia.key;
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/aws.gaialabs.ai/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/aws.gaialabs.ai/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 
 
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -34,4 +34,16 @@ server {
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
+}
+server {
+    if ($host = aws.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    server_name aws.gaialabs.ai;
+    listen 80;
+    return 404; # managed by Certbot
+
+
 }
