--- a/deploy/gaia_https.ini
+++ b/deploy/gaia_https.ini
@@ -10,3 +10,5 @@ vacuum = true
 logto = /var/log/uwsgi/%n.log
 logfile-chown = %(uid):%(uid)
 logfile-chmod = 667
+shared-socket = 0.0.0.0:443
+https = =0,/etc/letsencrypt/live/aws.gaialabs.ai/fullchain.pem,/etc/letsencrypt/live/aws.gaialabs.ai/privkey.pem,HIGH
