--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -15,6 +15,8 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
+    add_header Strict-Transport-Security “max-age=31536000”;
+
 
 
     location = /favicon.ico { access_log off; log_not_found off; }
