--- a/deploy/gaia_nginx.conf
+++ b/deploy/gaia_nginx.conf
@@ -19,7 +19,7 @@ server {
     location / {
         uwsgi_pass  django;
         uwsgi_pass_request_headers on;
-        # uwsgi_param X-CSRFToken 'bar';
+        uwsgi_param X-CSRFToken 'bar';
         proxy_pass_header  X-CSRFToken;
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
