update https conf

--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -3,7 +3,7 @@ upstream django_http {
 }
 
 server {
-    listen      443;
+    # listen      443;
     server_name ec2-13-230-184-34.ap-northeast-1.compute.amazonaws.com 13.230.184.34 aws.gaialabs.ai www.aws.gaialabs.ai;
     charset     utf-8;
 
@@ -36,4 +36,16 @@ server {
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
+}
+server {
+    if ($host = aws.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    # server_name aws.gaialabs.ai;
+    # listen 80;
+    # return 404; # managed by Certbot
+
+
 }
