--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -3,12 +3,10 @@ upstream django_http {
 }
 
 server {
-    # listen      443;
-    server_name ec2-13-230-184-34.ap-northeast-1.compute.amazonaws.com 13.230.184.34 aws.gaialabs.ai www.aws.gaialabs.ai;
+    server_name ec2-13-230-184-34.ap-northeast-1.compute.amazonaws.com 13.230.184.34 aws.gaialabs.ai www.aws.gaialabs.ai ip.gaialabs.ai www.ip.gaialabs.ai;
     charset     utf-8;
 
-    # ssl_certificate         /home/ubuntu/app/ssl/gaia.crt;
-    # ssl_certificate_key     /home/ubuntu/app/ssl/gaia.key;
+    listen      80;
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/aws.gaialabs.ai/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/aws.gaialabs.ai/privkey.pem; # managed by Certbot
@@ -36,16 +34,4 @@ server {
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
-}
-server {
-    if ($host = aws.gaialabs.ai) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    # server_name aws.gaialabs.ai;
-    # listen 80;
-    # return 404; # managed by Certbot
-
-
 }
