--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -3,7 +3,7 @@ upstream django_http {
 }
 
 server {
-    server_name ec2-13-230-184-34.ap-northeast-1.compute.amazonaws.com 13.230.184.34 aws.gaialabs.ai www.aws.gaialabs.ai ip.gaialabs.ai www.ip.gaialabs.ai;
+    server_name aws.gaialabs.ai www.aws.gaialabs.ai ip.gaialabs.ai www.ip.gaialabs.ai;
     charset     utf-8;
 
     listen      80;
