--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -3,13 +3,15 @@ upstream django_http {
 }
 
 server {
-    server_name aws.gaialabs.ai www.aws.gaialabs.ai ip.gaialabs.ai www.ip.gaialabs.ai;
+    server_name home.gaialabs.ai ip.gaialabs.ai ;
     charset     utf-8;
 
     listen      80;
+    listen [::]:80;
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/aws.gaialabs.ai/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/aws.gaialabs.ai/privkey.pem; # managed by Certbot
+    listen [::]:443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/home.gaialabs.ai/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/home.gaialabs.ai/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
