--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -37,3 +37,18 @@ server {
         proxy_set_header Host $host;
     }
 }
+server {
+    if ($host = aws.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    if ($host = ip.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    server_name home.gaialabs.ai ip.gaialabs.ai;
+    listen 80;
+    return 404; # managed by Certbot
+
+
+}
