--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -6,8 +6,6 @@ server {
     server_name home.gaialabs.ai ip.gaialabs.ai ;
     charset     utf-8;
 
-    listen      80;
-    listen [::]:80;
     listen 443 ssl; # managed by Certbot
     listen [::]:443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/home.gaialabs.ai/fullchain.pem; # managed by Certbot
@@ -17,13 +15,7 @@ server {
 
     add_header Strict-Transport-Security “max-age=31536000”;
 
-    if ($host = aws.gaialabs.ai) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
 
-    if ($host = ip.gaialabs.ai) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static {
@@ -42,4 +34,20 @@ server {
         include     /home/ubuntu/app/gaia/deploy/uwsgi_params;
         proxy_set_header Host $host;
     }
+}
+server {
+    if ($host = aws.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    if ($host = ip.gaialabs.ai) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    server_name home.gaialabs.ai ip.gaialabs.ai;
+    listen 80;
+    listen [::]:80;
+    return 404; # managed by Certbot
+
+
 }
