--- a/deploy/gaia_nginx_https.conf
+++ b/deploy/gaia_nginx_https.conf
@@ -36,7 +36,7 @@ server {
     }
 }
 server {
-    if ($host = aws.gaialabs.ai) {
+    if ($host = home.gaialabs.ai) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
