update gaia ini

--- a/deploy/gaia_https.ini
+++ b/deploy/gaia_https.ini
@@ -10,4 +10,4 @@ vacuum = true
 logto = /var/log/uwsgi/%n.log
 logfile-chown = %(uid):%(uid)
 logfile-chmod = 667
-shared-socket = 0.0.0.0:443
+# shared-socket = 0.0.0.0:443
